--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@charset "UFT-8";
+
 *{
     margin: 0;
     padding: 0;
@@ -11,6 +13,7 @@ body{
 .cabecalho > h1{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 2em;
+    margin: auto;
     text-align: center;
     background-color: lightgray;
     padding: 10px 0px 10px 0px;
@@ -26,6 +29,7 @@ body{
 
 nav{
     background-color: rgba(211, 211, 211, 0.575);
+    margin: auto;
 
 }
 
@@ -50,6 +54,10 @@ main{
     border-bottom-right-radius: 8px;
 }
 
+.primeiroArtigo{
+    margin: auto;
+}
+
 .primeiroArtigo > h2{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.8em;
@@ -66,6 +74,10 @@ main{
     padding: 0px 10px;
 }
 
+.segundoArtigo{
+    margin: auto;
+}
+
 .segundoArtigo > h2{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.3em;
@@ -80,6 +92,10 @@ main{
     text-align: justify;
     text-indent: 15px;
     padding: 0px 10px;
+}
+
+.endereco{
+    margin: auto;
 }
 
 .endereco > h2{
@@ -102,6 +118,7 @@ main{
 .enderecoetelefone{
     background-color: rgb(34, 34, 34);
     color: white;
+    margin: auto;
     margin-top: 10px;
     padding-bottom: 6px;
 }
@@ -119,11 +136,12 @@ main{
     padding-left: 35px;
 }
 
-.rodape{
+.rodapeDoCriador{
     background-color: black;
+    margin: auto;
 }
 
-.rodape > p{
+.rodapeDoCriador > p{
     color: white;
     text-align: center;
     
