--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@ body{
     font-size: 2em;
     text-align: center;
     background-color: lightgray;
-    padding: 10px 0px 10px 0px; 
+    padding: 10px 0px 10px 0px;
+    text-shadow: 6px 5px 8px rgba(0, 0, 0, 0.300); 
 }
 
 .cabecalho > p{
@@ -30,7 +31,7 @@ nav{
 
 nav > a{
     color: black;
-    padding: 2px 10px;
+    padding: 2px 15px;
     text-decoration: none;
 }
 
@@ -57,9 +58,68 @@ main{
     padding-bottom: 10px;
 }
 
+.primeiroArtigo > p{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 0.9em;
+    text-align: justify;
+    text-indent: 15px;
+    padding: 0px 10px;
+}
+
+.segundoArtigo > h2{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.3em;
+    text-align: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.segundoArtigo > p{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 0.9em;
+    text-align: justify;
+    text-indent: 15px;
+    padding: 0px 10px;
+}
+
+.endereco > h2{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.3em;
+    text-align: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.endereco > p{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 0.9em;
+    text-align: justify;
+    text-indent: 15px;
+    padding: 0px 10px;
+}
+
+
+.enderecoetelefone{
+    background-color: rgb(34, 34, 34);
+    color: white;
+    margin-top: 10px;
+    padding-bottom: 6px;
+}
+
+.enderecoetelefone > h4{
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: normal;
+    font-size: 1.1em;
+    padding: 5px 0px 7px 18px;
+}
+
+.enderecoetelefone > p{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 0.9em;
+    padding-left: 35px;
+}
 
 .rodape{
-    margin: 20px 0px 0px 0px;
     background-color: black;
 }
 
