--- a/style.css
+++ b/style.css
@@ -44,8 +44,9 @@ nav > a:hover{
 }
 
 main{
-    height: 450px;
-    width: 600px;
+    min-width: 270px;
+    max-width: 840px;
+
     margin: auto;
     box-shadow: 10px 8px 5px rgba(0, 0, 0, 0.082);
     background-color: rgba(255, 255, 255, 0.527);
@@ -123,26 +124,37 @@ main{
     padding-bottom: 6px;
 }
 
+.enderecoetelefone > h3{
+    margin: auto;
+    font-size: 1.3em;
+    font-weight: bold;
+    text-align: center;
+    padding: 5px 0px 10px;
+}
+
 .enderecoetelefone > h4{
     font-family: Arial, Helvetica, sans-serif;
     font-weight: normal;
+    text-align: center;
     font-size: 1.1em;
-    padding: 5px 0px 7px 18px;
+    padding: 10px 0px 7px 18px;
 }
 
 .enderecoetelefone > p{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 0.9em;
-    padding-left: 35px;
+    text-align: center;
 }
 
 .rodapeDoCriador{
     background-color: black;
     margin: auto;
+    padding: 10px 0px;
 }
 
 .rodapeDoCriador > p{
     color: white;
+    font-size: 0.8em;
     text-align: center;
     
 }
