--- a/estilos/style.css
+++ b/estilos/style.css
@@ -48,6 +48,60 @@ nav > a:hover {
     background-color: rgba(211, 211, 211, 0.432);
 }
 
+.banner {
+    background-image: url('imagens/banner.png'); /* Troque por uma imagem real do seu trabalho */
+    background-size: cover;
+    background-position: center;
+    height: 300px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding: 0 20px;
+    color: white;
+    position: relative;
+}
+
+.banner::before {
+    content: "";
+    position: absolute;
+    top: 0; left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5); /* efeito escurecido por cima da imagem */
+    z-index: 1;
+}
+
+.banner-conteudo {
+    z-index: 2;
+    max-width: 700px;
+}
+
+.banner h2 {
+    font-size: 2em;
+    margin-bottom: 10px;
+    font-family: Arial, sans-serif;
+}
+
+.banner p {
+    font-size: 1.1em;
+    margin-bottom: 20px;
+}
+
+.botao-banner {
+    background-color: #ffffff;
+    color: #000;
+    padding: 10px 20px;
+    text-decoration: none;
+    font-weight: bold;
+    border-radius: 6px;
+    transition: background 0.3s;
+}
+
+.botao-banner:hover {
+    background-color: #ddd;
+}
+
 /* Conteúdo principal */
 main {
     min-width: 270px;
@@ -78,6 +132,13 @@ main article {
     text-align: justify;
     text-indent: 15px;
     padding: 0 10px;
+}
+
+.imagem1{
+    width: 700px;
+    height: 400px;
+    margin-left: 50px;
+    
 }
 
 /* Rodapé */
