--- a/estilos/style.css
+++ b/estilos/style.css
@@ -151,8 +151,8 @@ main article {
 }
 
 .enderecoetelefone > h4 {
-    font-weight: normal;
-    font-size: 1.1em;
+    font-weight: bolder;
+    font-size: 1.2em;
     margin-bottom: 10px;
 }
 
