--- a/estilos/style.css
+++ b/estilos/style.css
@@ -45,7 +45,8 @@ nav > a {
 }
 
 nav > a:hover {
-    background-color: rgba(211, 211, 211, 0.432);
+    background-color: rgba(196, 191, 191, 0.432);
+    border-radius: 8px;
 }
 
 .banner {
