--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-
+@import url('estilos/header.css');
 /* Reset básico */
 * {
     margin: 0;
@@ -149,6 +149,11 @@ main article {
     padding: 20px 10px 10px;
     text-align: center;
 }
+
+.div__rodape {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;}
 
 .enderecoetelefone > h4 {
     font-weight: bolder;
