--- a/estilos/header.css
+++ b/estilos/header.css
@@ -1,5 +1,5 @@
 .cabecalho {
-    background-color: var(--cinza-header);
+    background: var(--cinza-header);
     padding: 1em;
 }
 
@@ -17,7 +17,7 @@
 }
 
 .menu {
-    background-color: var(--cinza-header);
+    background: var(--cinza-header);
     padding: 0.5em;
     border-top: 0.5px solid rgba(0, 0, 0, 0.201);
 }
