adicionado cores novas a cada parte do style ou css

--- a/estilos/footer.css
+++ b/estilos/footer.css
@@ -1,6 +1,6 @@
 .rodape {
     padding: 1em;
-    background-color: var(--preto);
+    background-color: var(--cinza-escuro);
     color: var(--branco);
 }
 
