--- a/estilos/banner.css
+++ b/estilos/banner.css
@@ -1,5 +1,5 @@
 .banner {
-    background-color: var(--branco);
+    background-color: var(--cinza-azulado);
     padding: 1em;
     border-radius: 4px;
     border-bottom: 0.5px solid rgba(0, 0, 0, 0.096);
